# The-Adventurer

./: Button.cpp  Button.h  CMakeLists.txt  EnemySpawner.cpp  EnemySpawner.h  GUI.cpp  GUI.h  Game.cpp  Game.h  GraphicsSettings.cpp  GraphicsSettings.h  PlayerGUI.cpp  PlayerGUI.h  Precom.cpp  Precom.h  README.md  Tile.cpp  Tile.h  kit.txt  main.cpp  score.txt  text.slmp
Components/: AnimationComponent.cpp  AnimationComponent.h  AttributeComponent.cpp  AttributeComponent.h  HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h  SkillComponent.cpp  SkillComponent.h
Entities/: Boss.cpp  Boss.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Slime.cpp  Slime.h
GUI/: Dead.cpp  Dead.h  PauseMenu.cpp  PauseMenu.h
Items/: Inventory.cpp  Inventory.h  Items.cpp  Items.h
Map/: TileMap.cpp  TileMap.h
Sound/: Sound.cpp  Sound.h
States/: EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  NameState.cpp  NameState.h  ScoreState.cpp  ScoreState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  mainmenuState.cpp  mainmenuState.h
States/EditorModes/: DefaultMode.cpp  DefaultMode.h  EditorMode.cpp  EditorMode.h  EditorModes.h  EnemyEditorMode.cpp  EnemyEditorMode.h
config/: graphics.ini  text.slmp  window.ini
resources/images/Assets/Map/16x16/Tile/: TerrainSet.xcf  TerrainSet1.xcf
resources/images/Assets/Map/16x16/Tilesets/: BasicTileset.tsx  Candy.xcf  map.tmx
resources/images/Assets/Monsters/Boss/: Boss.xcf
resources/images/Assets/Monsters/Slime/: Slime.xcf
resources/images/Assets/Player/Adventurer/: adventurer-Sheet.tsx  adventurer-Sheet2x.xcf  adventurer-Sheet3x.xcf  adventurer-Sheet3xFire.xcf  adventurer-Sheet3xIce.xcf  adventurer-Sheet3xTrophy.xcf
resources/images/Edit/: DefaultTerrainFit.xcf  UndergroundDefault.xcf
